# rust-wasm-demo

./: .gitignore  README.md
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
js/: package-lock.json  package.json
js/rust-wasm-vite/: package-lock.json  package.json
react_client/: package-lock.json  package.json
react_client/src/: App.js
rust/: Cargo.toml
rust/src/: lib.rs
server/: index.js  package-lock.json  package.json
