[package]
name = "rust-wasm-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
wasm-bindgen = "0.2.88"

# this tells cargo that we want to build a wasm binary
[lib]
crate-type = ["cdylib", "rlib"]
# instead of /pkg, we want to output to ../client/pkg
# path = "../client/pkg/rust_wasm_demo.rs"
